# genetic_ml

lib/genetics/: Cargo.toml
lib/genetics/src/: lib.rs
lib/lib-brain/: Cargo.toml
lib/lib-brain/src/: lib.rs
lib/simulation/: Cargo.toml
lib/simulation-wasm/: Cargo.toml
lib/simulation-wasm/src/: lib.rs
lib/simulation/src/: animal.rs  eye.rs  lib.rs  world.rs
www/: bun.lockb  index.html  index.js  package-lock.json  package.json
