[package]
name = "lib-simulation"
version = "0.1.0"
edition = "2021"

[dependencies]
lib-brain = { version = "0.1.0", path = "../lib-brain" }
getrandom = { version = "0.2.15", features = ["js"] }
nalgebra = { version = "0.32.5", features = ["rand-no-std"] }
rand = "0.8.5"
genetics = { version = "0.1.0", path = "../genetics" }

[dev-dependencies]
test-case = "3.3.1"
